--- a/research_env/demo_pytorch_CNN.ipynb
+++ b/research_env/demo_pytorch_CNN.ipynb
@@ -19,6 +19,9 @@
       },
       "outputs": [],
       "source": [
+        "# modular coding of the above projects with MLflow\n",
+        "### https://github.com/neerajbafila/pytorch-CNN\n",
+        "\n",
         "import os\n",
         "ROOT = \"/content/drive/MyDrive/Colab Notebooks\"\n",
         "os.chdir(ROOT)"
